changed index and style

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>Contact</h1>
-    <form action="https://learn-forms.netlify.com/submit/part2">
+    <form class ="form-inputs"action="https://learn-forms.netlify.com/submit/part2">
       <label for="name">First f-name</label>
       <input type="text" name="name">
       <label for="email">Email</label>
@@ -17,13 +17,13 @@
       <input type="number" name="tel">
       <label for="radio">Contact Preference</label>
       <div> 
-<input type="radio" id="phone-choice" name="contact" value="phone">
-<label for="phone-choice">Phone</label>
-<input type="radio" id="email-choice" name="contact" value="email">
-<label for="phone-choice">email</label>
-<input type="radio" id="post-choice" name="contact" value="post">
-<label for="phone-choice">post</label>
-</div>
+      <input type="radio" id="phone-choice" name="contact" value="phone">
+      <label for="phone-choice">Phone</label>
+      <input type="radio" id="email-choice" name="contact" value="email">
+      <label for="phone-choice">email</label>
+      <input type="radio" id="post-choice" name="contact" value="post">
+      <label for="phone-choice">post</label>
+      </div>
       <label for="message">message</label>
       <textarea name="message"></textarea>
       <input type="checkbox" name="marketingConsent">
